--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "shugyoza",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^22.8.1",
     "nodemon": "^3.1.6",
     "typescript": "^5.6.2"
-  },
-  "dependencies": {}
+  }
 }
