--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
   ],
   "author": "shugyoza",
   "license": "ISC",
+  "dependencies": {
+    "pg": "^8.13.0"
+  },
   "devDependencies": {
     "@types/node": "^22.8.1",
     "nodemon": "^3.1.6",
