--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.8.1",
+    "@types/pg": "^8.11.10",
     "nodemon": "^3.1.6",
     "typescript": "^5.6.2"
   }
