--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "./dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc --p .",
     "build:watch": "tsc --watch",
-    "start": "node --env-file=.env ./dist/server.js",
+    "start": "node --env-file=.env ./dist/server.js --host 0.0.0.0",
     "dev": "nodemon --env-file=.env ./dist/server.js"
   },
   "keywords": [
